tests/incremental_haste_all_providers/incremental_haste_all_providers.exp
Initial status:
Error ------------------------------------------------------------------------------------------------------- bar.js:3:2

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   bar.js:3:2
   3| (foo: empty); // error: foo.js.flow declares foo to be number
       ^^^

References:
   foo.js.flow:2:25
   2| declare module.exports: number;
                              ^^^^^^ [1]
   bar.js:3:7
   3| (foo: empty); // error: foo.js.flow declares foo to be number
            ^^^^^ [2]



Found 1 error

Change .js file:
Error ------------------------------------------------------------------------------------------------------- bar.js:3:2

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   bar.js:3:2
   3| (foo: empty); // error: foo.js.flow declares foo to be number
       ^^^

References:
   foo.js.flow:2:25
   2| declare module.exports: number;
                              ^^^^^^ [1]
   bar.js:3:7
   3| (foo: empty); // error: foo.js.flow declares foo to be number
            ^^^^^ [2]



Found 1 error
